<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Hello My Animal App"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="391dp"
            android:layout_height="114dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_color"
            android:orientation="horizontal"
            android:padding="16dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="86dp"
                android:layout_height="81dp"
                android:contentDescription="@string/cd_animal3"
                android:scaleType="centerCrop"
                android:src="@drawable/cat" />

            <LinearLayout
                android:layout_width="139dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:text="@string/cat"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description1"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:text="@string/real_little_king"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/details_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="13dp"
                android:text="@string/details" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="391dp"
            android:layout_height="114dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_color"
            android:orientation="horizontal"
            android:padding="16dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/image2"
                android:layout_width="86dp"
                android:layout_height="80dp"
                android:contentDescription="@string/cd_animal2"
                android:scaleType="centerCrop"
                android:src="@drawable/dog" />

            <LinearLayout
                android:layout_width="139dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:text="@string/dog"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description2"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:text="@string/faithful_friend_and_reliable_companion"
                    android:textSize="16sp" />

            </LinearLayout>


            <Button
                android:id="@+id/details_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="13dp"
                android:text="@string/dog_details" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="391dp"
            android:layout_height="114dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_color"
            android:orientation="horizontal"
            android:padding="16dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/image3"
                android:layout_width="86dp"
                android:layout_height="82dp"
                android:contentDescription="@string/cd_animal1"
                android:scaleType="centerCrop"
                android:src="@drawable/owl" />

            <LinearLayout
                android:layout_width="139dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:text="@string/owl"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description3"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:text="@string/symbol_of_wisdom_and_intelligence"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/details_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="13dp"

                android:text="@string/owl_details"
                />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>